--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@clerk/clerk-react": "^5.21.2",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "lucide-react": "^0.562.0",
     "motion": "^11.18.1",
+    "papaparse": "^5.5.3",
+    "plotly.js-dist-min": "^3.3.1",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.1.1",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
