--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.562.0",
     "motion": "^11.18.1",
     "papaparse": "^5.5.3",
+    "pdfjs-dist": "^5.4.449",
     "plotly.js-dist-min": "^3.3.1",
     "quill": "^2.0.3",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
+    "recharts": "^3.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
