--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.21.2",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@supabase/supabase-js": "^2.89.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "motion": "^11.18.1",
