--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.1.1",
