--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@supabase/supabase-js": "^2.89.0",
+    "chart.js": "^4.5.1",
+    "express-validator": "^7.3.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "motion": "^11.18.1",
