seo added with meta tag footer improved

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 
 RAZORPAY_KEY_ID=rzp_test_Rx2I5u0o0EHnwe
 RAZORPAY_KEY_SECRET=8ts4oGd2qYQmYpl8cmsq0kXM
+
+VITE_GA_MEASUREMENT_ID=G-4281XRHMX4
