--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ RAZORPAY_KEY_ID=rzp_test_Rx2I5u0o0EHnwe
 RAZORPAY_KEY_SECRET=8ts4oGd2qYQmYpl8cmsq0kXM
 
 VITE_GA_MEASUREMENT_ID=G-4281XRHMX4
+
+VITE_CLERK_DEVELOPMENT_KEY=pk_test_Y2hhcm1lZC1zaGVwaGVyZC00MC5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsuZmlueGJveC5jb20k
